--- a/model/mental.ipynb
+++ b/model/mental.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4               High  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "6669          0.329252       1.492837           -0.356475"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "  np.float64(0.2441370417250411)))"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -553,10 +553,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3535828368.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mhttps://github.com/devPtrException/mentalHealthRiskPredictor.git\u001b[39m\n          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "https://github.com/devPtrException/mentalHealthRiskPredictor.git\n",
+    "git remote add origin \"https://github.com/devPtrException/mentalHealthRiskPredictor.git\"\n",
+    "\n",
+    "\"D:\\XCode\\Setup\\Git\\mingw64\\etc\\ssl\\certs\\ca-bundle.crt\"\n",
+    "git config --global http.sslCAInfo \"D:\\XCode\\Setup\\Git\\mingw64\\etc\\ssl\\certs\\ca-bundle.crt\"\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
